--- a/mealdb.html
+++ b/mealdb.html
@@ -22,6 +22,12 @@
             <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
                 id="button-search">Search</button>
         </div>
+        <!-- spinner -->
+        <div id="spinner" class="text-center">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
         <div>
             <h3 id="error-message" class="text-danger text-center w-50 mx-auto mt-5 py-5 bg-white container
                 rounded-3">No data Found please Insert a food name</h3>
